gitops/kustomize/pretext-trace/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: pretext-trace
  annotations:
    argocd.argoproj.io/sync-wave: "0"
