gitops/kustomize/pretext-trace/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pretext-trace
  annotations:
    argocd.argoproj.io/sync-wave: "2"
  labels:
    app.kubernetes.io/name: pretext-trace
    app.kubernetes.io/component: web
spec:
  selector:
    app.kubernetes.io/name: pretext-trace
    app.kubernetes.io/component: web
  ports:
    - name: http
      port: 80
      targetPort: http
